--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,11 +23,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller upx
+          pip install customtkinter==5.2.1 pynput==1.7.6 Pillow==10.2.0 requests==2.31.0 pyinstaller==5.17.0
 
       - name: Build Windows
         run: |
-          pyinstaller --onefile --name AutoclickerX.exe --icon=assets/logo_mouse.ico --version-file=version.txt --noconsole --clean --onefile --upx-dir=tools\upx main.py
+          pyinstaller --onefile --name AutoclickerX.exe --icon=assets/logo_mouse.ico --version-file=version.txt --noconsole --clean --onefile main.py
 
       - name: Upload Windows Build Artifact
         uses: actions/upload-artifact@v4.6.2
@@ -49,12 +49,11 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update
-          sudo apt install -y upx
-          pip install pyinstaller
+          pip install customtkinter==5.2.1 pynput==1.7.6 Pillow==10.2.0 requests==2.31.0 pyinstaller==5.17.0
 
       - name: Build Linux
         run: |
-          pyinstaller --onefile --name AutoclickerX --icon=assets/logo_mouse.ico --version-file=version.txt --noconsole --clean --onefile --upx-dir=tools\upx main.py
+          pyinstaller --onefile --name AutoclickerX --icon=assets/logo_mouse.ico --version-file=version.txt --noconsole --clean --onefile main.py
 
       - name: Upload Linux Build Artifact
         uses: actions/upload-artifact@v4.6.2
@@ -75,12 +74,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          brew install upx
-          pip install pyinstaller
+          pip install customtkinter==5.2.1 pynput==1.7.6 Pillow==10.2.0 requests==2.31.0 pyinstaller==5.17.0
 
       - name: Build macOS
         run: |
-          pyinstaller --onefile --name AutoclickerX --icon=assets/logo_mouse.ico --version-file=version.txt --noconsole --clean --onefile --upx-dir=tools\upx main.py
+          pyinstaller --onefile --name AutoclickerX --icon=assets/logo_mouse.ico --version-file=version.txt --noconsole --clean --onefile main.py
 
       - name: Upload macOS Build Artifact
         uses: actions/upload-artifact@v4.6.2
