--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install customtkinter==5.2.1 pynput==1.7.6 Pillow==10.2.0 requests==2.31.0 pyinstaller==5.17.0
+          pip install -r requirements.txt
 
       - name: Build Windows
         run: |
@@ -49,7 +49,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update
-          pip install customtkinter==5.2.1 pynput==1.7.6 Pillow==10.2.0 requests==2.31.0 pyinstaller==5.17.0
+          pip install -r requirements.txt
 
       - name: Build Linux
         run: |
@@ -74,7 +74,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install customtkinter==5.2.1 pynput==1.7.6 Pillow==10.2.0 requests==2.31.0 pyinstaller==5.17.0
+          pip install -r requirements.txt
 
       - name: Build macOS
         run: |
