--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build:
+  build-windows:
     runs-on: windows-latest
     steps:
       - name: Checkout code
@@ -85,3 +85,45 @@ jobs:
         with:
           name: AutoclickerX-macOS
           path: dist/AutoclickerX
+
+  release:
+    needs: [build-windows, build-linux, build-macos]
+    runs-on: ubuntu-latest 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.2.2
+
+      - name: Create GitHub release
+        id: create_release
+        uses: actions/create-release@v1.1.4
+        with:
+          tag_name: ${{ github.sha }}
+          release_name: Release ${{ github.sha }}
+          body: |
+            This release includes the latest build artifacts.
+          draft: true
+          prerelease: true
+
+      - name: Upload Windows artifact to release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: dist/AutoclickerX.exe
+          asset_name: AutoclickerX-Windows.exe
+          asset_content_type: application/octet-stream
+
+      - name: Upload Linux artifact to release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: dist/AutoclickerX
+          asset_name: AutoclickerX-Linux
+          asset_content_type: application/octet-stream
+
+      - name: Upload macOS artifact to release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: dist/AutoclickerX
+          asset_name: AutoclickerX-macOS
+          asset_content_type: application/octet-stream
