Remove extractor since it won't work

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,17 +63,11 @@ jobs:
         with:
           path: artifacts
 
-      - name: Extract version from version.txt
-        id: get_version
-        run: |
-          version=$(python -c "import re; f = open('version.txt', 'r'); content = f.read(); f.close(); match = re.search(r'ProductVersion\s*=\s*([0-9]+\.[0-9]+\.[0-9]+\.[0-9]+)', content); print(match.group(1) if match else 'Not found')")
-          echo "VERSION=$version" >> $GITHUB_ENV
-
       - name: Create GitHub Release with Assets
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ env.VERSION }}
-          name: Release ${{ env.VERSION }}
+          tag_name: ${{ github.sha }}
+          name: Release ${{ github.sha }}
           body: |
             This release includes the latest build artifacts.
           draft: true
